syntax = "proto3";

package organization.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/fundament-oss/fundament/organization-api/pkg/proto/gen/v1;organizationv1";

// Resource usage information
message ResourceUsage {
  double used = 10;
  double total = 20;
  string unit = 30;
}

// Status enumeration for clusters
enum ClusterStatus {
  CLUSTER_STATUS_UNSPECIFIED = 0;
  CLUSTER_STATUS_PROVISIONING = 1;
  CLUSTER_STATUS_STARTING = 2;
  CLUSTER_STATUS_RUNNING = 3;
  CLUSTER_STATUS_UPGRADING = 4;
  CLUSTER_STATUS_ERROR = 5;
  CLUSTER_STATUS_STOPPING = 6;
  CLUSTER_STATUS_STOPPED = 7;
  CLUSTER_STATUS_DELETING = 8;  // Cluster deletion in progress
}

// Node pool status
enum NodePoolStatus {
  NODE_POOL_STATUS_UNSPECIFIED = 0;
  NODE_POOL_STATUS_HEALTHY = 1;
  NODE_POOL_STATUS_DEGRADED = 2;
  NODE_POOL_STATUS_UNHEALTHY = 3;
}

// Cluster sync state from Gardener
message SyncState {
  optional google.protobuf.Timestamp synced_at = 10;       // When the cluster was last successfully synced
  optional string sync_error = 20;          // Error message if sync failed
  int32 sync_attempts = 30;                 // Number of sync attempts
  // Field 40 removed: last_attempt_at (no longer tracked in DB)
  optional string shoot_status = 50;        // Gardener shoot status (pending, progressing, ready, error, deleting)
  optional string shoot_message = 60;       // Human-readable status message from Gardener
  optional google.protobuf.Timestamp status_updated_at = 70; // When the shoot status was last updated
}
